feat: todos css

--- a/src/app/pages/todos/todos.component.html
+++ b/src/app/pages/todos/todos.component.html
@@ -1,3 +1,21 @@
-<todo />
-<in-progress />
-<done />
+<div class="container">
+  <div class="header">
+    <h2>Todos</h2>
+    <button class="new-task-btn">Yeni</button>
+  </div>
+
+  <div class="task-container">
+    <div class="task-column">
+      <h3>Başlamadım</h3>
+      <todo></todo>
+    </div>
+    <div class="task-column">
+      <h3>Devam Ediyor</h3>
+      <in-progress></in-progress>
+    </div>
+    <div class="task-column">
+      <h3>Tamamlandı</h3>
+      <done></done>
+    </div>
+  </div>
+</div>
