--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  font-family: "Arial", sans-serif;
+  background: transparent !important;
+}
+
+p,
+h3 {
+  font-family: inherit;
+}
