--- a/src/app/pages/todos/todos.component.html
+++ b/src/app/pages/todos/todos.component.html
@@ -1,7 +1,43 @@
 <div class="container">
   <div class="header">
     <h2>Todos</h2>
-    <button class="new-task-btn">Yeni</button>
+    <button class="new-task-btn" (click)="showDialog()" label="Show">
+      Yeni
+    </button>
+    <p-dialog [(visible)]="visible" [modal]="true" [style]="{ width: '25rem' }">
+      <ng-template #header>
+        <div class="inline-flex items-center justify-center gap-2">
+          <p-avatar
+            image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png"
+            shape="circle"
+          />
+          <span class="font-bold whitespace-nowrap"> Amy Elsner </span>
+        </div>
+      </ng-template>
+      <span class="p-text-secondary block mb-8">Update your information.</span>
+      <div class="flex items-center gap-4 mb-4">
+        <label for="username" class="font-semibold w-24"> Username </label>
+        <input pInputText id="username" class="flex-auto" autocomplete="off" />
+      </div>
+      <div class="flex items-center gap-4 mb-8">
+        <label for="email" class="font-semibold w-24">Email</label>
+        <input pInputText id="email" class="flex-auto" autocomplete="off" />
+      </div>
+      <ng-template #footer>
+        <p-button
+          label="Cancel"
+          [text]="true"
+          severity="secondary"
+          (click)="visible = false"
+        />
+        <p-button
+          label="Save"
+          [outlined]="true"
+          severity="secondary"
+          (click)="visible = false"
+        />
+      </ng-template>
+    </p-dialog>
   </div>
 
   <div class="task-container">
