--- a/src/app/pages/todos/todos.component.scss
+++ b/src/app/pages/todos/todos.component.scss
@@ -1,11 +1,8 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  padding: 2rem;
+  max-width: 1400px;
+  margin: auto;
 }
-h3 {
-  color: #000;
-}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -13,37 +10,14 @@ h3 {
   margin-bottom: 1rem;
 }
 
-.new-task-btn {
-  padding: 10px 20px;
-  border: none;
-  background-color: #008cba;
-  color: #000;
-  border-radius: 10px;
-  cursor: pointer;
-  font-size: 16px;
-}
-
 .task-container {
   display: flex;
-  justify-content: space-between;
-  gap: 15px;
+  gap: 10px;
 }
 
 .task-column {
   display: flex;
-  justify-content: center;
-  background-color: #f8f9fa;
+  flex-direction: column;
   padding: 20px;
-  width: 100%;
-}
-
-.p-card {
-  transition: transform 0.2s ease;
-  &:hover {
-    transform: scale(1.05);
-  }
-}
-
-.p-card.cursor-move {
-  cursor: grab;
+  border-radius: 8px;
 }
