fix: update css

--- a/src/app/pages/todos/todos.component.html
+++ b/src/app/pages/todos/todos.component.html
@@ -23,7 +23,7 @@
     </ng-template>
 
     <div class="mb-4 p-4 rounded-md">
-      <label for="name" class="block font-semibold mb-1 text-white">Adı:</label>
+      <label for="name" class="block font-semibold mb-1 text-dark">Adı:</label>
       <input
         pInputText
         id="name"
@@ -33,7 +33,7 @@
     </div>
 
     <div class="mb-4 p-4 rounded-md">
-      <label for="text" class="block font-semibold mb-1 text-white"
+      <label for="text" class="block font-semibold mb-1 text-dark"
         >İçeriği:</label
       >
       <textarea
