--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
@@ -40,4 +41,12 @@ h3 {
 }
 .p-card-body {
   min-height: 210px;
+}
+.ng-trigger.ng-trigger-animation.ng-tns-c787154972-0.p-dialog {
+  background: #fff;
+  color: #000;
+}
+.p-inputtext,
+textarea {
+  background: #ffffffc0 !important;
 }
