refactor: variable signal

--- a/src/app/pages/todos/components/todo-progress-column/todo-progress-column.component.html
+++ b/src/app/pages/todos/components/todo-progress-column/todo-progress-column.component.html
@@ -3,7 +3,7 @@
 >
   <div class="p-2">
     <h3 class="text-center font-semibold">
-      {{ title[1].label | statusLabel }}
+      {{ title()[1].label | statusLabel }}
     </h3>
   </div>
   <app-todo-card />
