--- a/src/app/pages/todos/components/todo-done-column/todo-done-column.component.html
+++ b/src/app/pages/todos/components/todo-done-column/todo-done-column.component.html
@@ -3,7 +3,7 @@
 >
   <div class="p-2">
     <h3 class="text-center font-semibold">
-      {{ title()[2].label | statusLabel }}
+      {{ todoStatusEnum.DONE | statusLabel }}
     </h3>
   </div>
   <app-todo-card />
