--- a/src/app/pages/todos/components/todo-start-column/todo-start-column.component.html
+++ b/src/app/pages/todos/components/todo-start-column/todo-start-column.component.html
@@ -3,7 +3,7 @@
 >
   <div class="p-2">
     <h3 class="text-center font-semibold">
-      {{ title()[0].label | statusLabel }}
+      {{ todoStatusEnum.TODO | statusLabel }}
     </h3>
   </div>
 
