feat: todo state generated with signal

--- a/src/app/pages/todos/components/todo-progress-column/todo-progress-column.component.html
+++ b/src/app/pages/todos/components/todo-progress-column/todo-progress-column.component.html
@@ -6,5 +6,7 @@
       {{ todoStatusEnum.IN_PROGRESS | statusLabel }}
     </h3>
   </div>
-  <app-todo-card />
+  @for (todo of todos; track todo.id) {
+  <app-todo-card [todoItem]="todo" />
+  }
 </div>
