--- a/src/app/pages/todos/components/todo-start-column/todo-start-column.component.html
+++ b/src/app/pages/todos/components/todo-start-column/todo-start-column.component.html
@@ -7,6 +7,7 @@
     </h3>
   </div>
 
-  <app-todo-card></app-todo-card>
-  <app-todo-card></app-todo-card>
+  @for (todo of todos; track todo.id) {
+  <app-todo-card [todoItem]="todo" />
+  }
 </div>
