--- a/src/app/pages/todos/components/todo-form/todo-form.component.html
+++ b/src/app/pages/todos/components/todo-form/todo-form.component.html
@@ -37,7 +37,7 @@
     </div>
     <div class="flex justify-end gap-2">
       <p-button label="Cancel" severity="secondary" (click)="closeDialog()" />
-      <p-button label="Save" (click)="closeDialog()" />
+      <p-button label="Save" (click)="save()" />
     </div>
   </p-dialog>
 </form>
