--- a/src/app/pages/todos/todo.component.html
+++ b/src/app/pages/todos/todo.component.html
@@ -13,9 +13,9 @@
       </button>
     </div>
     <div class="w-full flex gap-6 justify-center">
-      <app-todo-start-column class="w-1/3" />
-      <app-todo-progress-column class="w-1/3" />
-      <app-todo-done-column class="w-1/3" />
+      <app-todo-start-column class="w-1/3" [todos]="todo" />
+      <app-todo-progress-column class="w-1/3" [todos]="inProgress" />
+      <app-todo-done-column class="w-1/3" [todos]="done" />
     </div>
   </div>
 </div>
